--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ flutter:
     - assets/images/unknown_person.jpg
     - assets/images/kurdistan_flag.png
     - assets/images/us_flag.png
+    - assets/images/test/
 
   
         
