--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,11 @@ dependencies:
   intl:
   flutter:
     sdk: flutter
+  firebase_core: ^2.24.2
+  firebase_auth: ^4.16.0
+  cloud_firestore: ^4.14.0
+  firebase_storage: ^11.6.0
+  firebase_database: ^10.4.0
 
 dev_dependencies:
   flutter_test:
